--- a/src/app/pages/main-page/professor-sub/professor-suporte/professor-suporte.component.html
+++ b/src/app/pages/main-page/professor-sub/professor-suporte/professor-suporte.component.html
@@ -48,7 +48,7 @@
 <!-- Container para a imagem, sem campo de texto ao lado -->
 <div class="image-container">
   <img
-    src="../../../../../assets/images/person/person.jpg"
+    src="assets/images/person/person.jpg"
     alt="Imagem"
   />
 </div>
