--- a/src/app/pages/main-page/game/game-2/game-2.component.html
+++ b/src/app/pages/main-page/game/game-2/game-2.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <iframe
-  src="../../../../../assets/games/JogoFinalizadoPedro/menu.html"
+  src="assets/games/JogoFinalizadoPedro/menu.html"
   width="1000px"
   height="600px"
   frameBorder="0"
