Atualizações no projeto

--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -142,7 +142,7 @@
                         <p>Com a nossa versão gratuita, você pode testar todas as funcionalidades essenciais e proporcionar uma experiência de aprendizado acessível e envolvente.</p>
 
                         <button>
-                            <i class="fa-solid fa-cloud-arrow-down" style="font-size: 18px; padding: 0 5px;"></i> VERSÃO GRÁTIS
+                            <i class="fa-solid fa-cloud-arrow-down" style="font-size: 18px; padding: 0 5px;"></i> VERSÃO BETA
                         </button>
                     </div>
 
