--- a/src/app/pages/main-page/game/main/game-main/game-main.component.html
+++ b/src/app/pages/main-page/game/main/game-main/game-main.component.html
@@ -17,6 +17,18 @@
     <a [routerLink]="['/main/game5']">
       <img src="assets/images/gamestill/angelo-still.PNG" alt="Imagem 5">
     </a>
+    <a [routerLink]="['/main/game6']">
+      <img src="assets/images/gamestill/explo-still.PNG" alt="Imagem 6">
+    </a>
+    <a [routerLink]="['/main/game7']">
+      <img src="assets/images/gamestill/friday-still.PNG" alt="Imagem 7">
+    </a>
+    <a [routerLink]="['/main/game8']">
+      <img src="assets/images/gamestill/snake-still.PNG" alt="Imagem 8">
+    </a>
+    <a [routerLink]="['/main/game9']" style="opacity: 0;">
+      <img src="assets/images/gamestill/angelo-still.PNG" alt="Imagem 9">
+    </a>
 
     <!-- Se adicionar mais, ele cria novas linhas automaticamente -->
   </div>
