Atualizações no projeto

--- a/src/app/pages/main-page/game/game-9/game-9.component.html
+++ b/src/app/pages/main-page/game/game-9/game-9.component.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <iframe
-  src="assets/games/DOOM-HTML/Doom_HTML/Titlescreen.html"
-  width="1000px"
-  height="600px"
-  frameBorder="0"
-  scrolling="no"
-  ></iframe>
+  <body>
+    <img src="assets/images/background/doom.PNG" alt="Imagem 3">
+    <iframe
+      src="https://js-dos.com/games/doom.exe.html"
+      width="1000px"
+      height="600px"
+      frameBorder="0"
+      scrolling="no"
+      allowfullscreen
+    ></iframe>
+  </body>
 </html>
