Atualizações no projeto

--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -49,7 +49,7 @@
                         <ul>
 
                             <h2 class="desativa"><i class="fa-solid fa-x"></i></h2>
-                            <li><a>O Site não está pronto para mobile, use um desktop</a></li>
+                            <li><span>O site não está pronto para mobile, use um desktop</span></li>
                             <li><a href="#home">HOME</a></li>
                             <li><a href="#sobre">SOBRE</a></li>
                             <li><a href="#servicos">SERVIÇOS</a></li>
@@ -62,7 +62,7 @@
                 <div class="text-banner">
                     <h2>FAZENDO UM TRABALHO MARAVILHOSO</h2>
                     <h1>BEM-VINDO AO EDUCACONNECT</h1>
-                    <h3>Onde nossa maior prioriedade é sua educação.</h3>
+                    <h3>Onde nossa prioridade é sua educação.</h3>
                 </div>
 
             </div>
@@ -110,7 +110,8 @@
                         <div class="features-single">
 
                             <div class="feat-img">
-                                <h2><i class="fa fa-thumbs-o-up hi-icon"></i></h2>
+                                <h2><i class="fa-regular fa-thumbs-up hi-icon"></i>
+</h2>
                             </div>
                             <div class="feat-txt">
                                 <h3>Ambiente Totalmente Interativo</h3>
@@ -135,7 +136,7 @@
                     </div>
 
                     <div class="device_txt">
-                        <h2>Dispositivos Moveis</h2>
+                        <h2>Dispositivos Móveis</h2>
 
                         <p>Nosso ambiente educativo foi projetado para funcionar perfeitamente em qualquer dispositivo, garantindo que alunos e professores possam acessar conteúdos com facilidade, seja no celular, tablet ou computador.</p>
                         <p class="blue">Acompanhe o progresso dos alunos em tempo real, resolva atividades e explore um ambiente interativo diretamente da palma da sua mão. Tudo isso com uma interface intuitiva e adaptável a diferentes telas.</p>
@@ -215,7 +216,7 @@
                         <div class="serv-single">
                             <div class="serv-img">
                                 <i class="fa-solid fa-screwdriver-wrench"></i>
-                                <span>Supporte 24/7</span>
+                                <span>Suporte 24/7</span>
                             </div>
                             <div class="serv-txt">
                                 <p>Conte com nossa equipe sempre que precisar. Oferecemos suporte técnico contínuo para garantir o bom uso da plataforma.</p>        </div>
@@ -226,7 +227,7 @@
                         <div class="serv-single">
                             <div class="serv-img">
                                 <i class="fa-solid fa-users"></i>
-                                <span>Uso Amigavel</span>
+                                <span>Uso Amigável</span>
                             </div>
                             <div class="serv-txt">
                                 <p>Interface simples e amigável para que pais, professores e alunos possam navegar com facilidade e segurança.</p>
@@ -238,7 +239,7 @@
                         <div class="serv-single">
                             <div class="serv-img">
                                 <i class="fa-solid fa-bell"></i>
-                                <span>Notifications</span>
+                                <span>Notificações</span>
                             </div>
                             <div class="serv-txt">
                                 <p>Receba alertas sobre tarefas, reuniões e atualizações diretamente no seu dispositivo, sem perder nada.</p>
