--- a/src/app/pages/landing-page/landing-page.component.css
+++ b/src/app/pages/landing-page/landing-page.component.css
@@ -39,7 +39,7 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   height: 100%;
   position: absolute;
-  background: linear-gradient(to left, #000428 , #00498a);
+  background: linear-gradient(to left, #000428 , #1d8df0);
   opacity: 0.8;
 }
 
