Atualizações no projeto

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -18,6 +18,7 @@
       <li><a routerLink="/main/desempenho" (click)="closeSidebar()">DESEMPENHO</a></li>
       <li><a routerLink="/main/rendimento" (click)="closeSidebar()">RENDIMENTO</a></li>
       <li><a routerLink="/main/mensagens" (click)="closeSidebar()">MENSAGENS</a></li>
+      <li><a routerLink="/main/responsavel" (click)="closeSidebar()">RESPONSAVEL</a></li>
       <li><a routerLink="/main/game-main" (click)="closeSidebar()">JOGOS</a></li>
     </ul>
   </div>
